--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-plugin",
-  "version": "1.0.0",
-  "description": "A minimal boilerplate for the essential files Gatsby looks for in a plugin",
+  "name": "gatsby-plugin-image-checker",
+  "version": "0.0.1",
+  "description": "A plugin to list corrupt image files.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,14 @@
     "gatsby",
     "gatsby-plugin"
   ],
-  "author": "Kyle Gill <kyle.robert.gill@gmail.com>",
-  "license": "MIT"
+  "author": "Tyler Barnes <tylerdbarnes@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "fs-extra": "^9.0.0",
+    "gatsby-transformer-sharp": "^2.4.4",
+    "probe-image-size": "^5.0.0"
+  },
+  "devDependencies": {
+    "dumper.js": "^1.3.1"
+  }
 }
